# ditw_project

./: README.md  academic_creds.json  credentials.json  preliminary.ipynb  pyproject.toml  rehydrating_tweets.md  runner.sh
data/: dkpol_meta.jsonl  dkpol_tweet_ids.txt  dkpol_tweets.jsonl  dkpol_tweets_sample.json  folketing_small_subclusters.json  folketinget_data_latest.csv  folketinget_large_clusters.json  folketinget_top_n_words_large_cluster.json  folketinget_top_n_words_small_subcluster.json  twitter_large_clusters.json  twitter_small_subclusters.json  twitter_top_n_words_large_cluster.json  twitter_top_n_words_small_subcluster.json  wrong_preds.txt
data/annotations/post/: Ida_v2.jsonl  Johan_v2.jsonl  Nadia_v2.jsonl  admin_v2.jsonl  annotated_data_v1.jsonl  annotated_data_v2.jsonl  annotated_data_v3.jsonl
data/annotations/pre/: annotation_v1.jsonl  annotation_v2.jsonl
data/eval_clusters/: folketinget_large.txt  folketinget_sub.txt  twitter_large.txt  twitter_sub.txt
models/: sentiment_log_reg.pkl  tf_idf_vectorizer.pkl
src/: Twitter-politics-line-plot.ipynb  Untitled.ipynb  annotation.ipynb  annotation_agreement.py  classification_model.py  clustering.ipynb  clustering.py  config.py  folketinget_clustering.ipynb  json_utils.py  oda_scraper.py  politics_data_cleaning.ipynb  preprocessing.py  tags_mentions_statistics.ipynb  topic_modelling.py  twitter_api.py  twitter_api2.py  twitter_eda.ipynb  twitter_eda_spacy.py  twitter_vs_politics.ipynb  using_sentiment_model.ipynb  word-counts.ipynb
