[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hrmussa <andersgiovanni@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Scrapy = "^2.5.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
numpy = "^1.21.2"
tweepy = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
