[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hrmussa <andersgiovanni@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Scrapy = "^2.5.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
numpy = "^1.21.2"
tweepy = "^4.0.1"
sentence-transformers = "^2.1.0"
umap-learn = "^0.5.1"
hdbscan = "^0.8.27"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
pandas = "^1.3.3"
scikit-learn = "^1.0.1"
rfc3339 = "^6.2"
jupyter = "^1.0.0"
spacy = "3.1.4"
gensim = "^4.1.2"
dacy = "^1.2.3"
sentencepiece = "^0.1.96"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
